# naptha-roko

./: README.md  pyproject.toml
chat/: run.py  schemas.py  utils.py
chat/chroma/: README.md  chroma_interface.py  create_collection.py  query_collection.py
chromadb/: README.md  create_collection.py  test_collection.py
