[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["casey <casey@aliveai.com.au>"]
readme = "README.md"
packages = [
    {include = "chat", from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.7.0"
ollama = "^0.2.1"
chromadb = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
